       wasn't reset.
  - (configure) gentoo Linux requires the '-n' argument for 'tail +2' to
       work correctly (thanks, Juanjo!).
  - (interpret.c, object.c, lex.c) Removed some compiler warnings.
  - (comm.c) Removed a crasher when running with --check-refcounts: References
       by snooping non-interactives weren't counted (Bug #492).

05-Oct-2007 (Lars Duening)  (3.2.15)
  - Created snapshot.

04-Nov-2006 (Lars Duening, Philip Hancke)
  - (pkg-tls, main.c) Added new options --tls-crlfile and --tls-crldirectory
       to hold the Certificate Revocation information.
  - (pkg-tls, func_spec) New efun tls_refresh_certs() to reload the
       certificates and certificate revocations.

09-Jul-2006 (Lars Duening)  (3.2.14)
  - Created snapshot.

12-Jun-2006 (Lars Duening)
  - Oh dear, has it been that long?
  - (make_func.y) Modified a case of undefined behaviour in the creation
       of the character classification tables: only 'unsigned char' types have
       a defined overflow behaviour (thanks, Erik!)
  - (configure) -fno-force-mem is deprecated.

27-Mar-2006 (Lars Duening)
  - (comm.c, pkg-tls.c) Corrected compilation errors when TLS
      was enabled (and nobody had noticed... :-) ).
      
12-Mar-2006 (Lars Duening)  (3.2.13)
  - Created snapshot.

08-Mar-2006  (Malcom Tester)
  - (lp-245/obj/master.c) Made the move implementation more robust.

07-Mar-2006  (Lars Duening)
  - (pkg-tls.c) Two modifications to increase reconnect stability (thanks,
      Philipp!).

06-Mar-2006  (Lars Duening)
  - (backend, comm.c, object) The logon(obj) function moved from
      backend.c into object.c, and was renamed logon_object() - it's
      more sensical this way.
  - (comm.c) If the master::connect() initiates a secure connection
      which gets stuck in the handshake, neither logon() is called nor
      is the prompt printed. Also, if the tls_init_connection() didn't
      set a callback, the driver will provide a callback to logon().