@@ -10,6 +10,8 @@ See the file HISTORY for a user-oriented summary of all the changes.
   - (interpret.c, object.c, lex.c) Removed some compiler warnings.
   - (comm.c) Removed a crasher when running with --check-refcounts: References
        by snooping non-interactives weren't counted (Bug #492).
+  - (sprintf.c) Removed a 64-bit issue (comparison of two values with
+    differing value ranges) (Bug #490)
 
 05-Oct-2007 (Lars Duening)  (3.2.15)
   - Created snapshot.
